Work in progress on updating MD/Bootstrap to most recent version, introducing light/dark switcher, and colors as settings

--- a/cjkcms/templates/cjkcms/pages/base.html
+++ b/cjkcms/templates/cjkcms/pages/base.html
@@ -5,7 +5,7 @@
 {% wagtail_site as site %}
 <!doctype html>
 {% endspaceless %}
-<html prefix="og: http://ogp.me/ns#" lang="{{ LANGUAGE_CODE }}" >
+<html prefix="og: http://ogp.me/ns#" lang="{{ LANGUAGE_CODE }}" data-mdb-theme="dark">
 {% block base_head %}
   <head>
         <script>{# Pass in CMS variables to JavaScript #}
