--- a/cjkcms/templates/cjkcms/pages/page.mini.html
+++ b/cjkcms/templates/cjkcms/pages/page.mini.html
@@ -7,6 +7,6 @@
   <div class="card-body">
     <h5 class="card-title">{{page.title}}</h5>
     <p class="card-text">{{page.body_preview}}</p>
-    <a class="card-link" href="{% pageurl page %}" title="{{page.title}}">Read more</a>
+    <a class="card-link stretched-link" href="{% pageurl page %}" title="{{page.title}}">Read more</a>
   </div>
 </div>
