Implemented page property breadcrumb_title in breadcrumb snippet template. Implemented per-page breadcrumbs visibility.

--- a/cjkcms/templates/cjkcms/pages/base.html
+++ b/cjkcms/templates/cjkcms/pages/base.html
@@ -92,7 +92,7 @@
                     {% endif %}
                 {% endblock %}
 
-                {% if settings.cjkcms.LayoutSettings.breadcrumbs %}
+                {% if settings.cjkcms.LayoutSettings.breadcrumbs and page.breadcrumbs_visible %}
                 {% block breadcrumbs %}{% endblock %}
                 {% endif %}
 
