--- a/cjkcms/templates/cjkcms/snippets/breadcrumbs.html
+++ b/cjkcms/templates/cjkcms/snippets/breadcrumbs.html
@@ -10,7 +10,7 @@
             <li class="none">
                 <object type="image/svg+xml" data="{% static 'cjkcms/images/icons/'|add:settings.cjkcms.LayoutSettings.breadcrumb_icon|add:'.svg' %}" 
                 class="opacity-75" style="margin-bottom:-2px;"></object> 
-                <a href="{{ p.url }}">{{ p.title }}</a>
+                <a href="{{ p.url }}">{{ p.specific.breadcrumb_title }}</a>
             </li>
             
             {% endif %}
@@ -18,7 +18,7 @@
         <li class="breadcrumb-item active ms-1" aria-current="page">
             <object type="image/svg+xml" data="{% static 'cjkcms/images/icons/'|add:settings.cjkcms.LayoutSettings.breadcrumb_icon|add:'.svg' %}" 
             class="opacity-75" style="margin-bottom:-2px;"></object> 
-            {{ page.title }}</li>
+            {{ page.breadcrumb_title }}</li>
         {% endblock %}
         </ol>
     </nav>
