--- a/cjkcms/templates/cjkcms/pages/search.html
+++ b/cjkcms/templates/cjkcms/pages/search.html
@@ -60,7 +60,11 @@
             {% for page in results_paginated %}
             <div class="mb-5">
                 {% with page=page.specific %}
-                    {% include page.search_template %}
+                    {% if page.search_template %}
+                        {% include page.search_template %}
+                    {% else %}
+                        {% include "cjkcms/pages/search_result.html" %}
+                    {% endif %}
                 {% endwith %}
             </div>
             {% endfor %}
