--- a/cjkcms/templates/cjkcms/blocks/button_block.html
+++ b/cjkcms/templates/cjkcms/blocks/button_block.html
@@ -1,8 +1,8 @@
-{% load cjkcms_tags %}
+{% load cjkcms_tags wagtailcore_tags %}
 
 {% can_show_item value.visible_for as csi %}
 {% if csi %}
-<a href="{{self.url}}"
+<a href="{% if request.LANGUAGE_CODE and request.LANGUAGE_CODE != 'en' %}/{{ request.LANGUAGE_CODE }}{% endif %}{{ self.url }}"
     {% if settings.cjkcms.AnalyticsSettings.ga_track_button_clicks %}
         data-ga-event-category='{{self.settings.ga_tracking_event_category|default:"Button"}}'
         data-ga-event-label='{{self.settings.ga_tracking_event_label|default:self.button_title}}'
