Updated hamburger code in navbar to work with mdb 8.1.0

--- a/cjkcms/templates/cjkcms/snippets/navbar.html
+++ b/cjkcms/templates/cjkcms/snippets/navbar.html
@@ -24,7 +24,14 @@
       {% endif %}
     </a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-mdb-target="#navbar" data-mdb-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+    <button 
+        class="navbar-toggler" 
+        type="button" 
+        data-mdb-collapse-init
+        data-bs-toggle="collapse" 
+        data-mdb-target="#navbar" 
+        data-bs-target="#navbar" 
+        aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
     </button>
 
