Updated base template to accept app_name param in frontend_scripts.html

--- a/cjkcms/templates/cjkcms/pages/base.html
+++ b/cjkcms/templates/cjkcms/pages/base.html
@@ -155,7 +155,7 @@
         {% endblock %}
 
         {% block frontend_scripts %}
-            {% include "cjkcms/snippets/frontend_scripts.html" %}
+            {% include "cjkcms/snippets/frontend_scripts.html" with app_name='app' %}
         {% endblock %}
 
         {% block cjkcms_scripts %}
