--- a/cjkcms/templates/cjkcms/snippets/frontend_scripts.html
+++ b/cjkcms/templates/cjkcms/snippets/frontend_scripts.html
@@ -2,13 +2,11 @@
 {% friendly_load webpack_loader %}
 
     {% if settings.cjkcms.LayoutSettings.frontend_theme == 'python-webpack' %}
-        {% if_has_tag javascript_pack %}
-            {% if app_name %}
-            {% javascript_pack 'app' app_name attrs='charset="UTF-8"' %} {# you may add space-separated 'app2' etc after 'app' #}
-            {% else %}
-            {% javascript_pack 'app' attrs='charset="UTF-8"' %} {# you may add space-separated 'app2' etc after 'app' #}
-            {% endif %}
-        {% endif_has_tag %}
+        {% if app_name %}
+            {% if_has_tag javascript_pack %}{% javascript_pack 'app' app_name attrs='charset="UTF-8"' %}{% endif_has_tag %}
+        {% else %}
+            {% if_has_tag javascript_pack %}{% javascript_pack 'app' attrs='charset="UTF-8"' %}{% endif_has_tag %}
+        {% endif %}
     {% else %}
         <script src="{% theme_js %}" 
             crossorigin="anonymous"></script>              
