Updated search results template to show number of results in each page type, and hide empty page categories

--- a/cjkcms/templates/cjkcms/pages/search.html
+++ b/cjkcms/templates/cjkcms/pages/search.html
@@ -35,19 +35,26 @@
         </form>
         {# endif #}
 
-        {% if pagetypes %}
+        {% if results_by_model %}
         {% query_update request.GET 'p' None as qs_nop %}
         <div class="mt-5">
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     {% query_update qs_nop 't' None as qs_t %}
-                    <a class="nav-link {% if not form.t.value %}active{% endif %}" href="?{{qs_t.urlencode}}">{% trans 'All Results' %}</a>
+                    <a class="nav-link {% if not form.t.value %}active{% endif %}" href="?{{ qs_t.urlencode }}">{% trans 'All Results' %}</a>
                 </li>
-                {% for pt in pagetypes %}
-                <li class="nav-item">
-                    {% query_update qs_nop 't' pt.content_type.model as qs_t %}
-                    <a class="nav-link {% if form.t.value == pt.content_type.model %}active{% endif %}" href="?{{qs_t.urlencode}}">{{pt|get_plural_name_of_class}}</a>
-                </li>
+                {% for key, result in results_by_model.items %}
+                    {% if result.count > 0 %}
+                        {% query_update qs_nop 't' key as qs_t %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if form.t.value == key %}active{% endif %}" href="?{{ qs_t.urlencode }}">{{ result.model|get_plural_name_of_class }}
+                            <span class="badge badge-info">
+                                {{ result.count }}
+                                <span class="visually-hidden">search results</span>
+                            </span>
+                        </a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         </div>
