--- a/cjkcms/templates/cjkcms/blocks/pagelist_article_card_group.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_article_card_group.html
@@ -3,7 +3,10 @@
 
 {% block block_render %}
 
-    <div class="card-group">
+    <div class="card-group {{self.settings.custom_css_class}}"
+     {% if self.settings.custom_id %}
+     id="{{self.settings.custom_id}}"
+     {% endif %}>
         {% for page in pages %}
         {% with page.specific as article %}
             {% include "cjkcms/blocks/article_block_card.html" %}
