--- a/cjkcms/templates/cjkcms/blocks/cardgrid_group.html
+++ b/cjkcms/templates/cjkcms/blocks/cardgrid_group.html
@@ -2,7 +2,8 @@
 {% load wagtailcore_tags %}
 
 {% block grid_content %}
-<div class="card-group {{self.settings.custom_css_class}}">
+<div class="card-group {{self.settings.custom_css_class}}"
+      {% if self.settings.custom_id %}id="{{self.settings.custom_id}}"{% endif %}>
       {% for block in self.content %}
             {% include_block block %}
       {% endfor %}
