--- a/cjkcms/templates/cjkcms/blocks/pagelist_article_card_deck.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_article_card_deck.html
@@ -8,8 +8,7 @@
         {{self.settings.custom_css_class}}
     {% else %}
         row-cols-1 row-cols-md-2 row-cols-lg-3 g-4
-    {% endif %}
-    "
+    {% endif %}"
      {% if self.settings.custom_id %}
      id="{{self.settings.custom_id}}"
      {% endif %} >
