--- a/cjkcms/templates/cjkcms/blocks/pagelist_toc_nextprev.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_toc_nextprev.html
@@ -3,11 +3,10 @@
 
 {% block block_render %}
 
-<div class="list-group
-    {% if self.settings.custom_css_class %}
-        {{self.settings.custom_css_class}}
-    {% endif %}
-    ">
+<div class="list-group {{self.settings.custom_css_class}}"
+     {% if self.settings.custom_id %}
+     id="{{self.settings.custom_id}}"
+     {% endif %}>
     {% if self.title %}
     <h5 class="fw-bold">{{self.title}}</h5>
     {% endif %}
