Removed the big callout  in the classifiers page admin tab

--- a/cjkcms/templates/cjkcms/widgets/checkbox_classifiers.html
+++ b/cjkcms/templates/cjkcms/widgets/checkbox_classifiers.html
@@ -24,12 +24,8 @@
     {% endwith %}
 {% else %}
     {% load i18n %}
-    <div class="cjkcms-callout">
+    <div class="">
         <div class="cjkcms-big-icon icon icon-snippet"></div>
-        <h3>
-            <span class="cjkcms-new">{% trans "New!" %}</span>
-            {% trans "Organize Pages with Classifiers" %}
-        </h3>
         <p>
             {% trans "Use Classifiers to create custom categories and filters."%}
         </p>
