Minor fixes to layout of card_landing2 (z-index and font size)

--- a/cjkcms/templates/cjkcms/blocks/card_landing2.html
+++ b/cjkcms/templates/cjkcms/blocks/card_landing2.html
@@ -43,12 +43,12 @@
           </div>
           <div class="col-8 col-lg-9 col-xl-10 text-center text-md-start">
             {% if self.title %}
-            <h1 class="fw-bold" style="color:#FFFFFF; position: relative; z-index: 1; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">
+            <h1 class="fw-bold fs-2 pb-2" style="color:#FFFFFF; position: relative; z-index: 1; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">
             {{self.title}}
             </h1>
             {% endif %}
             {% if self.subtitle %}
-            <h2 class="lh-1 ls-tight fw-900 text-primary mb-4">
+            <h2 class="lh-1 ls-tight fw-900 fs-3 text-primary mb-4 mt-4" style="position: relative; z-index: 1;">
               {{self.subtitle}}
             </h2>
             {% endif %}
