Small fixes for StepsBlock and IconTextBlock templates

--- a/cjkcms/templates/cjkcms/blocks/icon_text_block.html
+++ b/cjkcms/templates/cjkcms/blocks/icon_text_block.html
@@ -17,8 +17,8 @@
   <div class="icon-text-{{block.id}} d-flex align-items-start gap-3 {{ self.settings.custom_css_class }}" 
     {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}
   >
-    <div class="rounded d-inline-flex align-items-center justify-content-center p-3 icon-bg" style="aspect-ratio: 1/1;">
-      {% if self.icon %}<i class="{{ self.icon }} fs-1 fa-fw icon-color"></i>{% endif %}
+    <div class="rounded d-inline-flex align-items-center justify-content-center p-3 bg-primary icon-bg" style="aspect-ratio: 1/1;">
+      {% if self.icon %}<i class="{{ self.icon }} fs-1 fa-fw text-white icon-color"></i>{% endif %}
     </div>
     {% if self.title %}<h3 class="fw-semibold fs-2 mb-0">{{ self.title }}</h3>{% endif %}
     {% if self.text %}<p class="fs-5 fw-lighter mb-0">{{ self.text }}</p>{% endif %}
