--- a/cjkcms/templates/cjkcms/blocks/steps_block.html
+++ b/cjkcms/templates/cjkcms/blocks/steps_block.html
@@ -96,7 +96,7 @@
 <section class="position-relative fw-lighter {{ self.settings.custom_css_class }}" {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
 
   <div class="container">
-    <ol class="steps-container-{{block.id}} d-flex ms-3 ms-lg-0 list-unstyled">
+    <ol class="steps-container-{{block.id}} steps-container d-flex ms-3 ms-lg-0 list-unstyled">
       {% for item in self.items %}
           <li class="step-item">
 
