--- a/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
@@ -1,45 +1,41 @@
-{# Renders articles as cards, showing title, date, body, author display, and meta description #}
+{# Article Cards layout using a Bootstrap card-group #}
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<div
-  class="row {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% else %}row-cols-1 row-cols-md-2 g-4{% endif %}"
-  {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}
->
+<div class="card-group {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% endif %}"
+     {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
   {% for page in pages %}
     {% with page.specific as article %}
-      <div class="col">
-        <div class="card h-100">
-          {% if article.cover_image and self.show_covers %}
-            {% image article.cover_image fill-900x600 as cover_image %}
-            <a href="{{ article.url }}" title="{{ article.title }}">
-              <img class="card-img-top" src="{{ cover_image.url }}" alt="{{ cover_image.title }}">
-            </a>
+      <div class="card">
+        {% if article.cover_image and self.show_covers %}
+          {% image article.cover_image fill-900x600 as cover_image %}
+          <a href="{{ article.url }}" title="{{ article.title }}">
+            <img src="{{ cover_image.url }}" class="card-img-top" alt="{{ cover_image.title }}"/>
+          </a>
+        {% endif %}
+        <div class="card-body">
+          <h5 class="card-title"><a href="{{ article.url }}">{{ article.title }}</a></h5>
+          {# Meta description, if available #}
+          {% if article.seo_description %}
+            <p class="card-text text-muted">{{ article.seo_description }}</p>
           {% endif %}
-          <div class="card-body">
-            <h5 class="card-title mb-1"><a href="{{ article.url }}">{{ article.title }}</a></h5>
-            <div class="card-subtitle mb-2 text-muted">
-              {% if self.show_dates %}{{ article.seo_published_at }}{% endif %}
-              {% if article.author_display %} &bull; {{ article.author_display }}{% elif article.seo_author and self.show_authors %} &bull; {{ article.seo_author }}{% endif %}
-            </div>
-
-            {% if article.seo_description %}
-              <p class="text-muted mb-2">{{ article.seo_description }}</p>
+          {# Body: render preview if available, otherwise full body #}
+          {% if article.body_preview %}
+            <p class="card-text">{{ article.body_preview }}</p>
+          {% elif article.body %}
+            <div class="card-text">{{ article.body }}</div>
+          {% endif %}
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">
+            {{ article.seo_published_at }}
+            {% if article.author_display %} &bull; {{ article.author_display }}
+            {% elif article.seo_author %} &bull; {{ article.seo_author }}
             {% endif %}
-
-            {% if self.show_preview %}
-              <div class="mb-2">{{ article.body_preview }}</div>
-            {% else %}
-              {# Render full body if preview is not requested #}
-              {% if article.body %}
-                <div class="mb-2">{{ article.body }}</div>
-              {% endif %}
-            {% endif %}
-
-            <a href="{{ article.url }}" class="stretched-link" aria-label="Read {{ article.title }}"></a>
-          </div>
+          </small>
         </div>
       </div>
     {% endwith %}
   {% endfor %}
 </div>
+
 
