--- a/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
+++ b/cjkcms/templates/cjkcms/blocks/pagelist_article_cards.html
@@ -1,41 +1,71 @@
-{# Article Cards layout using a Bootstrap card-group #}
+{# Article Cards layout using MDB product card style adapted for articles #}
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<div class="card-group {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% endif %}"
-     {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
-  {% for page in pages %}
-    {% with page.specific as article %}
-      <div class="card">
-        {% if article.cover_image and self.show_covers %}
-          {% image article.cover_image fill-900x600 as cover_image %}
-          <a href="{{ article.url }}" title="{{ article.title }}">
-            <img src="{{ cover_image.url }}" class="card-img-top" alt="{{ cover_image.title }}"/>
-          </a>
-        {% endif %}
-        <div class="card-body">
-          <h5 class="card-title"><a href="{{ article.url }}">{{ article.title }}</a></h5>
-          {# Meta description, if available #}
-          {% if article.seo_description %}
-            <p class="card-text text-muted">{{ article.seo_description }}</p>
-          {% endif %}
-          {# Body: render preview if available, otherwise full body #}
-          {% if article.body_preview %}
-            <p class="card-text">{{ article.body_preview }}</p>
-          {% elif article.body %}
-            <div class="card-text">{{ article.body }}</div>
-          {% endif %}
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">
-            {{ article.seo_published_at }}
-            {% if article.author_display %} &bull; {{ article.author_display }}
-            {% elif article.seo_author %} &bull; {{ article.seo_author }}
-            {% endif %}
-          </small>
-        </div>
-      </div>
-    {% endwith %}
-  {% endfor %}
-</div>
+<section style="background-color: #eee;"
+  {% if self.settings.custom_id %}id="{{ self.settings.custom_id }}"{% endif %}>
+  <div class="container py-5 {% if self.settings.custom_css_class %}{{ self.settings.custom_css_class }}{% endif %}">
 
+    {% for page in pages %}
+      {% with page.specific as article %}
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-12 col-xl-10">
+            <div class="card shadow-0 border rounded-3">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                    <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                      {% if article.cover_image and self.show_covers %}
+                        {% image article.cover_image fill-900x600 as cover_image %}
+                        <a href="{{ article.url }}" title="{{ article.title }}">
+                          <img src="{{ cover_image.url }}" class="w-100" alt="{{ cover_image.title }}"/>
+                          <div class="hover-overlay">
+                            <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                          </div>
+                        </a>
+                      {% endif %}
+                    </div>
+                  </div>
+
+                  <div class="col-md-6 col-lg-6 col-xl-6">
+                    <h5 class="mb-1"><a href="{{ article.url }}">{{ article.title }}</a></h5>
+                    <div class="mb-2 text-muted small">
+                      {% if self.show_dates %}{{ article.seo_published_at }}{% endif %}
+                      {% if article.author_display %} <span class="text-primary"> • </span> {{ article.author_display }}
+                      {% elif self.show_authors and article.seo_author %} <span class="text-primary"> • </span> {{ article.seo_author }}
+                      {% endif %}
+                    </div>
+                    {% if article.seo_description %}
+                      <div class="mt-1 mb-2 text-muted small">
+                        <span>{{ article.seo_description }}</span>
+                      </div>
+                    {% endif %}
+                    <p class="text-truncate mb-4 mb-md-0">
+                      {% if article.body_preview %}
+                        {{ article.body_preview }}
+                      {% elif article.body %}
+                        {{ article.body }}
+                      {% endif %}
+                    </p>
+                  </div>
+
+                  <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none border-start">
+                    <div class="d-flex flex-column mt-4">
+                      <a href="{{ article.url }}" class="btn btn-primary btn-sm" type="button">Read</a>
+                      {% if article.seo_author %}
+                        <span class="btn btn-outline-primary btn-sm mt-2 disabled" aria-disabled="true">
+                          {{ article.seo_author }}
+                        </span>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endwith %}
+    {% endfor %}
+
+  </div>
+</section>
 
